--- a/microserviceAssure.properties
+++ b/microserviceAssure.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ref_pers_db?serv
 spring.datasource.username=root
 spring.datasource.password=
 urbanisation-si.clairprev.limiteNombreAssure=3
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
