--- a/microserviceContrat.properties
+++ b/microserviceContrat.properties
@@ -9,3 +9,4 @@ spring.data.mongodb.database=admin
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 urbanisation-si.clairprev.limiteNombreContrat=3
+eureka.client.serviceUrl.defaultZone=http://localhost:11111/eureka/
