--- a/microserviceProduit.properties
+++ b/microserviceProduit.properties
@@ -8,4 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 urbanisation-si.clairprev.limiteNombreProduit=3
+eureka.client.serviceUrl.defaultZone=http://localhost:11111/eureka/
 
