--- a/microserviceContrat.properties
+++ b/microserviceContrat.properties
@@ -1,4 +1,4 @@
-server.port=9996
+#server.port=9996
 # MongoDB
 #spring.data.mongodb.uri=mongodb://localhost:27017/admin?authSource=admin --username superuser --password motdepasse
 spring.data.mongodb.authentication-database=admin
